@@ -1014,26 +1014,6 @@ build-porting64-cc-safety0:
 
 # - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
 # Build and test various configurations that are supposed to work on a
-# Linux/x86 machine.
-
-multibuild-linux-x86: \
-  build-porting32-gcc-portability \
-  build-porting32-gcc-safety3 \
-  build-porting32-gcc-heapcodes \
-  build-porting32-gcc-kernelvoid32_heapcodes \
-  build-porting32-gcc-heapcodes-spvw_pages \
-  build-porting32-gcc-heapcodes-spvw_mixed_blocks \
-  build-porting32-gcc-wide \
-  build-porting32-gcc-old_gc \
-  build-porting32-gcc-multithread_gc \
-  build-porting32-gcc-generational_gc-old_gc \
-  build-porting32-gcc-generational_gc-multithread_gc \
-  build-porting32-gcc-safety0 \
-  build-porting32-gcc-safety0-optimized \
-  build-porting32-gcc-debug_gcsafety
-
-# - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
-# Build and test various configurations that are supposed to work on a
 # specified platform.
 
 # Sort order: Keep this list sorted by
@@ -1053,7 +1033,24 @@ multibuild-linux-arm: multibuild-porting32-gcc # TODO
 multibuild-linux-hppa: multibuild-porting32-gcc # TODO
 
 # Linux/i386
-multibuild-linux-i386: multibuild-porting32-gcc # TODO
+multibuild-linux-i386: \
+  build-porting32-gcc-portability \
+  build-porting32-gcc-safety3 \
+  build-porting32-gcc-heapcodes \
+  build-porting32-gcc-one_free_bit_heapcodes-trivialmap \
+  build-porting32-gcc-kernelvoid32_heapcodes \
+  build-porting32-gcc-heapcodes-spvw_pages \
+  build-porting32-gcc-heapcodes-spvw_mixed_blocks \
+  build-porting32-gcc-spvw_pure_blocks \
+  build-porting32-gcc-wide \
+  build-porting32-gcc-limited_memory \
+  build-porting32-gcc-old_gc \
+  build-porting32-gcc-multithread_gc \
+  build-porting32-gcc-generational_gc-old_gc \
+  build-porting32-gcc-generational_gc-multithread_gc \
+  build-porting32-gcc-safety0 \
+  build-porting32-gcc-safety0-optimized \
+  build-porting32-gcc-debug_gcsafety
 
 # Linux/m68k
 multibuild-linux-m68k: multibuild-porting32-gcc # TODO
